# mlip-platform

./: .gitignore  A2B.traj  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  MD_ENSEMBLE_DESIGN.md  README.md  bench_driver.py  codex-first-iteration.txt  idpp.traj  mlip_bench.py  neb_results.csv  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: install-smoke.yml  tests.yml  weekly.yml
docs/: MD_REFERENCE.md  OUTPUTS.md  PYTHON_API.md  UMA_USAGE_GUIDE.md  windows_setup_guide.md
docs/adr/: 0001-per-mlip-envs.md
docs/install/: README.md  chgnet.md  mace.md  sevenn.md  uma.md
docs/proposals/: ensemble-consensus-uncertainty.md
docs/superpowers/plans/: 2026-07-03-ci-test-quality-infrastructure.md  2026-07-21-unified-run-record.md
docs/superpowers/specs/: 2026-07-21-unified-run-record-design.md
md_result/7net-mf-ompa/: md.traj  md_energy.csv
md_result/mace/: md.traj  md_energy.csv
mlip_platform.egg-info/: SOURCES.txt  entry_points.txt
neb_result/7net-mf-ompa/: A2B.traj  neb_data.csv
neb_result/7net-mf-ompa/7net-mf-ompa/: idpp.traj  neb_data.csv
neb_result/7net-mf-ompa/images/: 00.vasp  01.vasp  02.vasp  03.vasp
neb_result/mace/: A2B.traj  A2B_full.traj  idpp.traj  neb_data.csv  neb_parameters.txt
neb_result/mace/images/: 01.vasp  02.vasp  03.vasp
neb_result/mace/mace/: A2B.traj
practice/: git_pull_practice.md
scripts/: generate_goldens.py
src/mlip_platform/: cli.py  md.py  neb.py  optim.py
src/mlip_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mlip_platform/cli/: main.py  utils.py
src/mlip_platform/cli/command/: benchmark.py  neb.py
src/mlip_platform/cli/commands/: autoneb.py  autoneb_results.py  benchmark.py  doctor.py  md.py  neb.py  optimize.py
src/mlip_platform/core/: md.py  mlip_bench.py  neb.py  optimize.py  utils.py
src/mlip_platform_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mliprun/cli/: main.py  utils.py
src/mliprun/cli/commands/: autoneb.py  autoneb_results.py  benchmark.py  doctor.py  md.py  neb.py  optimize.py
src/mliprun/core/: md.py  neb.py  optimize.py  params_io.py  run_record.py  utils.py
test/: CONTCAR_initial.vasp  POSCAR_final  README.md  fragment_initial.vasp  test_cli.py  test_cli_experimental.py  test_md_functionality_mace.py  test_md_functionality_sevenn.py  test_milp_single_point.py  test_mlip_single_point.py  test_mlip_single_point_mace.py  test_mlip_single_point_sevenn.py  test_neb_functionality.py  test_neb_functionality_mace.py  test_neb_functionality_sevenn.py
test/fixtures/structures/: CONTCAR_final.vasp
test/structures/: POSCAR
tests/: README.md  conftest.py  golden_inputs.py  test_benchmark.py  test_characterization_golden.py  test_characterization_invariants.py  test_cli.py  test_cli_commands.py  test_cli_doctor.py  test_cli_run_plot.py  test_cli_utils.py  test_core_md.py  test_core_neb.py  test_core_optimize.py  test_core_utils.py  test_integration_uma.py  test_md_mace.py  test_md_sevenn.py  test_milp_single_point.py  test_neb_constrained.py  test_neb_mace.py  test_neb_restart.py  test_neb_sevenn.py  test_optimize_batch.py  test_run_record.py  test_run_record_integration.py
tests/fixtures/structures/: fragment_final.vasp  opt.traj  opt_convergence.csv  opt_final.vasp  opt_params.txt
tests/fixtures/structures/folder1_md_mace/: md.traj  md_energy.csv  md_params.txt
tests/fixtures/structures/folder1_md_sevenn/: md.traj  md_energy.csv  md_params.txt
tests/fixtures/structures/folder2_neb_mace/: A2B.traj  A2B_full.traj  neb_parameters.txt
tests/fixtures/structures/folder2_neb_sevenn/: A2B.traj  A2B_full.traj  (+3 more)
tests/goldens/: md_nve_cu.json  neb_idpp_profile.json  optimize_cu_rattled.json  utils_calc_fmax.json
(+53 files in other folders)
