[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mliprun"
version = "0.4.0"
description = "CLI platform for running MLIP-based MD, NEB, and Benchmarking"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Juan M Arce-Ramos", email = "juan.arce@ihpc.a-star.edu.sg" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Base dependencies only. The MLIP backends (mace-torch, fairchem-core, sevenn,
# chgnet) and their torch stacks are intentionally NOT listed here: they have
# mutually incompatible pins and must be installed one-per-env via the recipes
# in docs/install/. See ADR 0001.
dependencies = [
    # Upper bound is deliberate. typer >=0.16 vendors its own copy of click
    # (typer._click), so a command's ctx yields typer._click ParameterSource
    # members rather than click's — which silently broke param_sources_from_ctx
    # once CI resolved a newer typer than the one developed against (see the
    # name-keyed _SOURCE_LABELS in cli/utils.py). The code handles that split,
    # but the cap stops an UNTESTED future typer from arriving unnoticed: CI
    # keeps validating the newest allowed version, and raising the ceiling is a
    # deliberate act that re-runs the suite. 0.27 is the newest version CI has
    # green-lit. The [all] extra is empty in modern typer (>=0.12 bundles rich
    # and shellingham) and only produces a pip warning on fresh installs.
    "typer>=0.20,<0.28",
    "ase",
    "pandas",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
# NEB interpolation sanity-check helper. Installed from git because the PyPI
# name "asetools" is taken by an unrelated project (an Aseprite image tool) --
# do NOT add a bare "asetools" to the base dependencies. The import in
# core/neb.py is guarded, so this extra is optional; install it to enable the
# post-interpolation atomic-distance check:
#   pip install -e ".[neb]"
neb = [
    "asetools @ git+https://github.com/manuelarcer/asetools.git",
]
dev = [
    "pytest",
    "pytest-cov",
    "diff-cover",
    # mutmut 3.x dropped the --paths-to-mutate CLI flag and reads config from
    # pyproject.toml ([tool.mutmut] below); pinned <3 for the flag-based CLI.
    "mutmut>=2.4,<3.0",
    "pip-audit",
]

[project.scripts]
mlip = "mliprun.cli.main:app"
md = "mliprun.cli.commands.md:app"
neb = "mliprun.cli.commands.neb:app"
autoneb = "mliprun.cli.commands.autoneb:app"
autoneb-results = "mliprun.cli.commands.autoneb_results:app"
benchmark = "mliprun.cli.commands.benchmark:app"
optimize = "mliprun.cli.commands.optimize:app"

[project.urls]
Homepage = "https://github.com/manuelarcer/mliprun"
Repository = "https://github.com/manuelarcer/mliprun"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.mutmut]
paths_to_mutate = "src/mliprun/"
