[metadata]
name = mlip-platform
version = 0.1.0
description = Machine-learning interatomic potential CLI for optimization, NEB, and MD

[options]
package_dir =
    = src
packages = find:
install_requires =
    click
    ase
    pandas
    sevenn
    mace

[options.entry_points]
console_scripts =
    mlip = mlip_platform.cli:cli